# CSApp

./: .gitignore  CMakeLists.txt
resources/: persons.json
src/: main.cpp  person.hpp  person_registry.hpp
ui/: app-window.slint
